--- a/assignment1_.tex
+++ b/assignment1_.tex
@@ -172,5 +172,36 @@ z^2 &= \pm\frac{R}{\sqrt{2}} \ But \ z= \frac{R}{\sqrt{2}} \ as \ z > 0
 \item The formula for the location of maximum electric field $z= \frac{R}{\sqrt{2}}$.
 \pagebreak
 \subsection{Part B}
+\item We start this part by finding the electric field at the maximum point:
+\begin{align*}
+E(z)&=\frac{Q}{4 \pi \varepsilon_0}\frac{z}{(z^2+R^2)^{\frac{3}{2}}} \\
+E \left ( \frac{R}{\sqrt{2}} \right )&=\frac{kQ  \frac{R}{\sqrt{2}}}{ \left ( \left(\frac{R}{\sqrt{2}} \right)^2+R^2 \right)^{\frac{3}{2}}} \\
+E \left ( \frac{R}{\sqrt{2}} \right )&=\frac{kQ  \frac{R}{\sqrt{2}}}{ \left( \frac{3R^2}{2} \right)^{\frac{3}{2}}} \\
+\end{align*}
+\item It isn't a easy task to simplfly the answer so it will be left in this form.
+\item We do have the formula for finding the force acting on a charge as a result of the electric field:
+\begin{displaymath}
+F_{Electric}=\vec{q}\vec{E}
+\end{displaymath}
+\item Hence:
+\begin{align*}
+F_{Electric}&=\vec{Q}\times \frac{kQ  \frac{R}{\sqrt{2}}}{ \left( \frac{3R^2}{2} \right)^{\frac{3}{2}}} \\
+&= \frac{kQ^2  \frac{R}{\sqrt{2}}}{ \left( \frac{3R^2}{2} \right)^{\frac{3}{2}}} \\
+\end{align*}
+\pagebreak
+\subsection{Finding the Maximum Mass}
+\item The maximum mass is when the ball is in static equilibrium. (Net Force on ball = 0)
+\item Because the ring is oriented horizontally, Gravitational Force acts on the ball.
+\item Both the ring and the ball has a positive charge so they repel each other.
+\item We start with drawing the free-body diagram of the ball:
+\\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\
+\item Equations of motion: 
+\begin{align*}
+F_{electric}-Mg&=0 \\
+Hence:
+\frac{kQ^2  \frac{R}{\sqrt{2}}}{ \left( \frac{3R^2}{2} \right)^{\frac{3}{2}}} - Mg &= 0 \\
+M &= \frac{kQ^2  \frac{R}{\sqrt{2}}}{ \left( \frac{3R^2}{2} \right)^{\frac{3}{2}}g} = \frac{kQ^2}{ \sqrt{2} \left(\frac{3}{2} \right)^{\frac{3}{2}}g R^2}
+\end{align*}
+\item This seems messy but at least it doesn't dependent on how far along the z axis is. As expected the maximum mass decreases as radius of the ring \textbf{increases}.
 \end{itemize}
 \end{document}
