--- a/assignment1_.tex
+++ b/assignment1_.tex
@@ -212,7 +212,45 @@ One simply(which is an understatement in its own right) has to remove $6.24 \tim
 
 \pagebreak
 \section{Question 6}
-\pagebreak
+In this case a diagram is very useful.
+\\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\ \\
+Magnitude of Force q1 acting on q3:
+\begin{align*}
+|F_{q1 on q3}|&=\frac{kq_1q_3}{r^2} \\
+&=\frac{9.0\times 10^9 \times 5 \times 10^{-8} \times 3\times 10^{-8}}{(0.1)^2} \\
+&=1.35 \times 10^{-3} N
+\end{align*}
+As opposite charges attract, $q_3$ experiences a downward force towards $q_1$ \\
+Hence $F_{q1 on q3}=-1.25 \times 10^{-3} N \vec{j} $ \\
+
+Magnitude of Force q2 acting on q3:
+\begin{align*}
+|F_{q2q3}|&=\frac{kq_2q_3}{r^2} \\
+&=\frac{9.0\times 10^9 \times 3 \times 10^{-8} \times 3\times 10^{-8}}{(0.1)^2+(0.05)^2} \\
+&=6.48 \times 10^{-4} N
+\end{align*}
+Force q2 acting on q3 can be spilt into i and j component
+\begin{align*}
+F_{q2q3}&=|F_{q2 on q3}| cos \Phi \vec{i}+ |F_{q2 on q3}| sin \Phi \vec{j} \\
+&=- 6.48 \times 10^{-4} \frac{5}{\sqrt{125}} \vec{i}+ 6.48 \times 10^{-4}  \frac{10}{\sqrt{125}} \vec{j}
+\end{align*} \\
+Add up the components of the forces together:
+\begin{align*}
+F_{q3}&= 6.48 \times 10^{-4} \frac{5}{\sqrt{125}} \vec{i}+ 6.48 \times 10^{-4}  \frac{10}{\sqrt{125}} \vec{j} - 1.35 \times 10^{-3} j \\
+&=-2.898\times 10^{-4} \vec{i}+ 7.704 \times 10^{-4} \vec{j}
+\end{align*}
+The magnitude of Force on charge 3 is:
+\begin{align*}
+|F_q3|&=\sqrt{(-2.898\times 10^{-4})^2+ (7.704 \times 10^{-4})^2} \\
+&=8.23\times 10^{-4} N
+\end{align*}
+The angle is:
+\begin{align*}
+\theta &= tan^{-1} \left|\frac{F_j}{F_i} \right|
+        =tan^{-1} \left(\frac{7.704 \times 10^{-4}}{2.898\times 10^{-4}} \right) \\
+       &=69.38^{\circ} \approx 69.4^{\circ}
+\end{align*}
+
 \section{Question 7}
 Each $Na^+$ and $Cl^{-}$ ion has either positive charge or negative charge of 1, meaning they both have
 $1.602\times10^{-19}$ Coulombs of charge. \\ 
@@ -243,7 +281,7 @@ E'(z)&=\frac{Q}{4 \pi \varepsilon_0} \frac{ d \left(\frac{z}{(z^2+R^2)^{\frac{3}
 &=\frac{Q}{4 \pi \varepsilon_0} \left(- 3 z^2 \times (z^2+R^2)^{-\frac{5}{2}} + (z^2+R^2)^{-\frac{3}{2}}\right)
 \end{align*}
 
-\item Because we are trying to find maximum let $E'(z)=0$:
+ Because we are trying to find maximum let $E'(z)=0$:
 \begin{align*}
 0&=\frac{Q}{4 \pi \varepsilon_0} \left(- 3 z^2 \times (z^2+R^2)^{-\frac{5}{2}} + (z^2+R^2)^{-\frac{3}{2}}\right) \\
 &=- 3 z^2 \times (z^2+R^2)^{-\frac{5}{2}} + (z^2+R^2)^{-\frac{3}{2}} \\
@@ -272,7 +310,7 @@ F_{Electric}&=\vec{Q}\times \frac{kQ  \frac{R}{\sqrt{2}}}{ \left( \frac{3R^2}{2}
 &= \frac{kQ^2  \frac{R}{\sqrt{2}}}{ \left( \frac{3R^2}{2} \right)^{\frac{3}{2}}} \\
 \end{align*}
 \pagebreak
-\subsection{Finding the Maximum Mass}
+\subsubsection{The Maximum Mass of The ball}
 \item The maximum mass is when the ball is in static equilibrium. (Net Force on ball = 0)
 \item Because the ring is oriented horizontally, Gravitational Force acts on the ball.
 \item Both the ring and the ball has a positive charge so they repel each other.
