--- a/assignment1_.tex
+++ b/assignment1_.tex
@@ -325,4 +325,14 @@ M &= \frac{kQ^2  \frac{R}{\sqrt{2}}}{ \left( \frac{3R^2}{2} \right)^{\frac{3}{2}
 \end{align*}
 \item This seems messy but at least it doesn't dependent on how far along the z axis is. As expected the maximum mass decreases as radius of the ring \textbf{increases}.
 \end{itemize}
+\pagebreak
+\section{Question 9}
+\subsection{Part a.}
+Gauss's Law. This is really taking me time to fully understand the implications of it and how it links to all other theories e.g. electric flux.
+\subsection{Part b.}
+Rotational motion is probably one of the easiest past so far. I have done it in the past and it was a struggle. I am glad to see it on PHS1022 as I know most (if not all) of it.
+\subsection{Part c.}
+Quantum Mechanics. Welcome to the world of physics at a smaller scale. It always fascinates me (even though I want to be an engineer so applied physics is a tad more fun).
+\subsection{Part d.}
+Perhaps the labs can be less intensive and have more reliable equipment (Yes I know it's first year but something better wouldn't do us any harm). 
 \end{document}
